[package]
name = "process_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.28.4"
pretty-bytes = "0.2.2"
prettytable-rs ="0.10.0"
clearscreen = "2.0.0"
cursive_core = "0.3.0"
cursive_table_view = "0.14"
cursive = "0.17.0"
fltk = "^1.4"
fltk-extras = "0.1.2"
psutil = "3.2.2"
procfs = "0.15.1"
users = "0.11.0"
crossterm = "0.26.1"